--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -42,8 +42,8 @@ jobs:
         # Move settings file to folder
         mv ./cstrike/addons/accuracyfix/accuracyfix.cfg publish/addons/accuracyfix/accuracyfix.cfg
 
-    - name: Deploy artifacts
-      uses: actions/upload-artifact@v3
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v4.3.3
       with:
         name: accuracyfix-linux
         path: publish/*
