--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -21,8 +21,10 @@ jobs:
       run: sudo apt-get update
 
     - name: Install build dependencies
-      run: sudo apt-get install -qq -y wget unzip build-essential gcc-4.8-multilib g++-4.8-multilib libgcc1:i386
-    
+      run: |
+        sudo apt-get update
+        sudo apt-get install -qq -y wget unzip build-essential gcc-4.8-multilib g++-4.8-multilib libgcc1:i386
+
     - name: Update alternatives
       run: sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 100 --slave /usr/bin/g++ g++ /usr/bin/g++-4.8
 
