--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -23,10 +23,10 @@ jobs:
     - name: Install build dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -qq -y wget unzip build-essential gcc-4.8-multilib g++-4.8-multilib libgcc1:i386
+        sudo apt-get install -qq -y wget unzip build-essential gcc-multilib g++-multilib libgcc1:i386
 
     - name: Update alternatives
-      run: sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 100 --slave /usr/bin/g++ g++ /usr/bin/g++-4.8
+      run: sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 100 --slave /usr/bin/g++ g++ /usr/bin/g++-9
 
     - name: Run build
       working-directory: ./AccuracyFix
