--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -9,23 +9,23 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
+    container: ubuntu:18.04
 
     steps:
     - uses: actions/checkout@v3
       
     - name: Add i386 architecture
-      run: sudo dpkg --add-architecture i386
+      run: dpkg --add-architecture i386
       
     - name: Update repository
-      run: sudo apt-get update
+      run: apt-get update
 
     - name: Install build dependencies
-      run: |
-        sudo apt-get install -qq -y wget unzip build-essential gcc-multilib g++-multilib libgcc1:i386
-
+      run: apt-get install -qq -y wget unzip build-essential gcc-4.8-multilib g++-4.8-multilib libgcc1:i386
+    
     - name: Update alternatives
-      run: sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 100 --slave /usr/bin/g++ g++ /usr/bin/g++-9
+      run: update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 100 --slave /usr/bin/g++ g++ /usr/bin/g++-4.8
 
     - name: Run build
       working-directory: ./AccuracyFix
@@ -42,7 +42,7 @@ jobs:
         # Move settings file to folder
         mv ./cstrike/addons/accuracyfix/accuracyfix.cfg publish/addons/accuracyfix/accuracyfix.cfg
 
-    - name: Upload a Build Artifact
+    - name: Deploy artifacts
       uses: actions/upload-artifact@v4.3.3
       with:
         name: accuracyfix-linux
