--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -10,22 +10,23 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    container: ubuntu:18.04
+    container: ubuntu:22.04
 
     steps:
     - uses: actions/checkout@v3
       
     - name: Add i386 architecture
-      run: dpkg --add-architecture i386
+      run: sudo dpkg --add-architecture i386
       
     - name: Update repository
-      run: apt-get update
+      run: sudo apt-get update
 
     - name: Install build dependencies
-      run: apt-get install -qq -y wget unzip build-essential gcc-4.8-multilib g++-4.8-multilib libgcc1:i386
+      run: |
+        sudo apt-get install -qq -y wget unzip build-essential gcc-multilib g++-multilib libgcc1:i386
     
     - name: Update alternatives
-      run: update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 100 --slave /usr/bin/g++ g++ /usr/bin/g++-4.8
+      run: sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 100 --slave /usr/bin/g++ g++ /usr/bin/g++-9
 
     - name: Run build
       working-directory: ./AccuracyFix
