--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -16,17 +16,17 @@ jobs:
     - uses: actions/checkout@v3
       
     - name: Add i386 architecture
-      run: sudo dpkg --add-architecture i386
+      run: dpkg --add-architecture i386
       
     - name: Update repository
-      run: sudo apt-get update
+      run: apt-get update
 
     - name: Install build dependencies
       run: |
-        sudo apt-get install -qq -y wget unzip build-essential gcc-multilib g++-multilib libgcc1:i386
+        apt-get install -qq -y wget unzip build-essential gcc-multilib g++-multilib libgcc1:i386
     
     - name: Update alternatives
-      run: sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 100 --slave /usr/bin/g++ g++ /usr/bin/g++-9
+      run: update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 100 --slave /usr/bin/g++ g++ /usr/bin/g++-9
 
     - name: Run build
       working-directory: ./AccuracyFix
