--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -10,7 +10,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    container: ubuntu:22.04
+    container: ubuntu:18.04
 
     steps:
     - uses: actions/checkout@v3
@@ -22,9 +22,11 @@ jobs:
       run: apt-get update
 
     - name: Install build dependencies
-      run: |
-        apt-get install -qq -y wget unzip build-essential gcc-multilib g++-multilib libgcc1:i386
+      run: apt-get install -qq -y wget unzip build-essential gcc-4.8-multilib g++-4.8-multilib libgcc1:i386
     
+    - name: Update alternatives
+      run: update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 100 --slave /usr/bin/g++ g++ /usr/bin/g++-4.8
+
     - name: Run build
       working-directory: ./AccuracyFix
       run: make
@@ -41,7 +43,7 @@ jobs:
         mv ./cstrike/addons/accuracyfix/accuracyfix.cfg publish/addons/accuracyfix/accuracyfix.cfg
 
     - name: Deploy artifacts
-      uses: actions/upload-artifact@v4.3.3
+      uses: actions/upload-artifact@v3
       with:
         name: accuracyfix-linux
         path: publish/*
